feat:update updates entities for dto and entities
