# libs/api/products/src/lib/entities/product.entity.ts
@@ -1,6 +1,4 @@
 import { Record } from '../../../../records/src/lib/entities/record.entity';
-import { record } from '../../../../database/src/lib/schema';
-import { ApiProperty } from '@nestjs/swagger';
 import { SelectProduct } from '@vg/api-database';
 import { User } from 'libs/api/users/src/entities/user.entity';
 import { Category } from 'libs/api/categories/src/entities/select-category.entity';
@@ -14,13 +12,21 @@ export class Product {
 
   image!: string;
 
-  seller!: User;
-
   records!: Record[];
+
+  latestPrice?: number;
+
+  seller!: User;
 
   createdAt!: Date;
 
-  constructor(data: SelectProduct) {
+  constructor(data: Product) {
     Object.assign(this, data);
+
+    if (this.records.length >= 1) {
+      this.latestPrice = this.records[0].unitPrice;
+
+      console.log(this.latestPrice);
+    }
   }
 }
