# libs/api/records/src/lib/dtos/create-record.dto.ts
@@ -1,6 +1,17 @@
+import { IsNotEmpty, IsNumber, IsPositive, IsString } from 'class-validator';
+
 export class CreateRecordDto {
+  @IsNotEmpty()
+  @IsNumber()
+  @IsPositive()
   productId!: number;
-  trackNumber!: string;
+
+  @IsNotEmpty()
+  @IsString()
   unitOfMeasure!: string;
+
+  @IsNotEmpty()
+  @IsNumber()
+  @IsPositive()
   unitPrice!: number;
 }
